<resources>
    <string name="app_name">پورتال دانشجویی</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="portal_splash">پورتال دانشجویی</string>
    <string name="tnb_club">TNB Club</string>
    <string name="welcome_back">خوش آمدید</string>
    <string name="read_it_together">سامانه ی پورتال دانشجویی تمام امکانات و فعالیت های سایت پورتال دانشجویی را داراست و تجربه ای بهتر را برای شما به ارمغان آورده است .</string>
    <string name="std_code">شماره دانشجویی</string>
    <string name="password">رمز عبور</string>
    <string name="forget_password">رمز عبور را فراموش کردم</string>
    <string name="login">ورود</string>
    <string name="omor_mali">امورمالی</string>
    <string name="omor_amozeshi">امورآموزشی</string>
    <string name="darkhast_daneshjoii">درخواست دانشجویی</string>
    <string name="entekhab_vahed">انتخاب واحد</string>
    <string name="person_info">اطلاعات شخصی</string>
    <string name="email">پیام‌ها</string>
    <string name="parvande">پرونده دیجیتال</string>
    <string name="subheader">subheader</string>
    <string name="map">نقشه</string>
    <string name="phone">ثبت موبایل</string>
    <string name="exit">خروج از حساب</string>
    <string name="vaziate_tahsili">خلاصه وضعیت تحصیلی</string>
    <string name="my_image">profile_image</string>
    <string name="shomarejadid">شماره موبایل جدید</string>
    <string name="change_pass">تغییر رمز عبور</string>
    <string name="nowpass">رمز عبور فعلی</string>
    <string name="newpass">رمز جدید</string>
    <string name="acceptnewpass">تکرار رمز جدید</string>
    <string name="e_payment">پرداخت الکترونیک</string>
    <string name="vaziate_mali">وضعیت مالی</string>
    <string name="mohasebe_shahrie">محاسبه شهریه</string>
    <string name="payment_error">پرداخت های ناموفق</string>
    <string name="bill_payment">پرداخت صورتحساب</string>
    <string name="bill_det">شما میتوانید از طریق یکی از کارتهای شتاب بانکی خود پرداخت آنلاین داشته باشید !</string>
    <string name="mablaghe_ghabele_pardakht">مبلغ قابل پرداخت (ريال) :</string>
    <string name="rial">ريال</string>
    <string name="pay">پرداخت</string>
    <string name="bestankar">بستانکار</string>
    <string name="bedehkar">بدهکار</string>
    <string name="shomarehesabjari">شماره حساب جاری</string>
    <string name="tarikhfish">تاریخ فیش</string>
    <string name="shomarefish">شماره فیش</string>
    <string name="itemmali">آیتم مالی</string>

</resources>
