<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/omor_mali_bottom_id"
        android:icon="@drawable/mali"
        android:title="@string/omor_mali"/>

    <item
        android:id="@+id/omor_amozeshi_bottom_id"
        android:icon="@drawable/ic_amozeshi_24dp"
        android:title="@string/omor_amozeshi" />

    <item
        android:id="@+id/darkhast_daneshjoii_bottom_id"
        android:icon="@drawable/ic_darkhast_24dp"
        android:title="@string/darkhast_daneshjoii" />

    <item
        android:id="@+id/entekhab_vahed_bottom_id"
        android:icon="@drawable/ic_vahed_24dp"
        android:title="@string/entekhab_vahed" />

</menu>
