<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreean">

    <ImageView
        android:src="@drawable/iau_logo"
        android:layout_centerInParent="true"
        android:id="@+id/img_logo_splash_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/portal_splash"
        android:layout_below="@id/img_logo_splash_id"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="@dimen/textsize_36sp"
        android:textStyle="bold"
        android:id="@+id/txt_portal_splash_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/tnb_club"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:textSize="@dimen/textsize_16sp"
        android:id="@+id/txt_tnb_id"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-4dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
        android:theme="@style/ProgressBarStyle" />


    <RelativeLayout
        android:id="@+id/afterAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="130dp"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:fontFamily="@font/iransans"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/textsize_26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readItTogetherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeTextView"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/iransans"
            android:text="@string/read_it_together"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textsize_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_login_id"
            android:layout_below="@+id/readItTogetherTextView"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/student_code_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/std_code"
                android:textAlignment="center"
                android:maxLines="1"
                android:inputType="phone"
                android:maxLength="20"
                android:drawableLeft="@drawable/ic_profile_black_24dp"
                android:textColor="@color/color_black"
                android:textSize="@dimen/textsize_18sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/student_password_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="20"
                android:textAlignment="center"
                android:textColor="@color/colorTextView"
                android:textSize="@dimen/textsize_18sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/padding_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/forget_password"
                    android:textColor="@color/fab_mark_color"
                    android:clickable="true"
                    android:id="@+id/btn_forget_pass_id"
                    android:focusable="true"
                    android:fontFamily="@font/iransans"
                    android:textSize="@dimen/textsize_16sp"
                    android:textStyle="bold" />

            </FrameLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login_id"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/iransans"
            android:textColor="@color/fab_detaile_color"
            android:textSize="@dimen/textsize_18sp" />

    </RelativeLayout>
</RelativeLayout>