<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E1F5F2F2"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner_nimsal_vaziat_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_withe"
            android:layout_margin="@dimen/margin_15dp"
            android:textAlignment="center"
            android:padding="@dimen/padding_15dp"
            android:paddingBottom="13dp"
            android:background="@drawable/bg_spinner"/>

        <android.support.v7.widget.CardView
            android:layout_below="@id/spinner_nimsal_vaziat_id"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_marginLeft="@dimen/margin_5dp"
            app:cardCornerRadius="@dimen/cardelevation_3dp"
            app:cardElevation="@dimen/cardelevation_3dp"
            android:layout_width="match_parent"
            android:padding="@dimen/padding_5dp"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_margin="@dimen/margin_3dp"
                    android:layout_width="match_parent"
                    android:id="@+id/linear_head_vaziat"
                    android:orientation="horizontal"
                    android:background="@color/gray_color"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/textsize_12sp"
                        android:text="@string/bestankar"
                        android:textAlignment="center"
                        android:fontFamily="@font/iransans"
                        android:textColor="@color/color_black"
                        android:textStyle="bold" />

                    <TextView
                        android:textSize="@dimen/textsize_12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bedehkar"
                        android:textAlignment="center"
                        android:fontFamily="@font/iransans"
                        android:textColor="@color/color_black"
                        android:textStyle="bold" />

                    <TextView
                        android:textSize="@dimen/textsize_12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shomarehesabjari"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:fontFamily="@font/iransans"
                        android:textStyle="bold" />

                    <TextView
                        android:textSize="@dimen/textsize_12sp"
                        android:fontFamily="@font/iransans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tarikhfish"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:textStyle="bold" />

                    <TextView
                        android:textSize="@dimen/textsize_12sp"
                        android:fontFamily="@font/iransans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shomarefish"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:textStyle="bold" />

                    <TextView
                        android:textSize="@dimen/textsize_12sp"
                        android:fontFamily="@font/iransans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/itemmali"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:id="@+id/view_redline_vaziat_head"
                    android:layout_below="@id/linear_head_vaziat"
                    android:background="@color/red" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/margin_3dp"
                    android:layout_below="@id/view_redline_vaziat_head"
                    android:dividerHeight="1dp"
                    android:footerDividersEnabled="true"
                    android:headerDividersEnabled="true"
                    android:layout_height="match_parent">

                </ListView>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>