<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#E1F5F2F2"
    tools:context=".fragments.Omor_Mali">

    <FrameLayout
        android:layout_width="match_parent"
        android:visibility="gone"
        android:id="@+id/frame_container_mali_menu_id"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear_menu_mali_id"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="@dimen/margin_10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:id="@+id/card_pardakht_error_id"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="@dimen/margin_10dp"
                app:cardElevation="@dimen/cardelevation_3dp"
                app:cardCornerRadius="5dp"
                android:layout_height="160dp">

                <LinearLayout
                    android:layout_margin="@dimen/margin_5dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="64dp"
                        android:background="@drawable/cerclebackgroundpurple"
                        android:layout_height="64dp"
                        android:padding="@dimen/padding_8dp"
                        android:src="@drawable/ic_payment_error"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:text="@string/payment_error"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:fontFamily="@font/iransans"
                        android:padding="@dimen/padding_5dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardElevation="@dimen/cardelevation_3dp"
                android:id="@+id/card_vaziat_mali_id"
                app:cardCornerRadius="5dp"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_height="160dp">

                <LinearLayout
                    android:layout_margin="@dimen/margin_5dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="64dp"
                        android:background="@drawable/cerclebackgroundpink"
                        android:layout_height="64dp"
                        android:padding="@dimen/padding_10dp"
                        android:src="@drawable/ic_vazeiate_mali"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:text="@string/vaziate_mali"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:fontFamily="@font/iransans"
                        android:padding="@dimen/padding_5dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardElevation="@dimen/cardelevation_3dp"
                app:cardCornerRadius="5dp"
                android:id="@+id/card_pardakht_e_id"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_height="160dp">

                <LinearLayout
                    android:layout_margin="@dimen/margin_5dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="64dp"
                        android:background="@drawable/cerclebackgroundgreen"
                        android:layout_height="64dp"
                        android:padding="@dimen/padding_10dp"
                        android:src="@drawable/ic_pardakht_e"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:text="@string/e_payment"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:fontFamily="@font/iransans"
                        android:padding="@dimen/padding_5dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>